--- a/products.html
+++ b/products.html
@@ -38,7 +38,7 @@
                     <p><i class="fas fa-tag"></i> $ 8.99 / meter</p>
                 </div>
                 <div class="product-card">
-                    <img src="folder_img/african_fabric3.jpg" alt="Luxury Cotton">
+                    <img src="folder_img/african_fabric3.JPG" alt="Luxury Cotton">
                     <h3><i class="fas fa-shopping-cart"></i>Wax shine</h3>
                     <p><i class="fas fa-tag"></i>  $ 10.00 / meter</p>
                 </div>
