--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
   <main class="about-content">
     <section>
       <h2>Who We Are</h2>
-      <p>Textilis is a textile manufacturing company based in the Democratic Republic of Congo (DRC), specializing in the production of high-quality fabrics. We offer a wide range of textiles, including neutral fashion fabrics for all styles, traditional African wax prints, and fully customized fabrics for fashion creators.</p>
+      <p>Textilis is a textile manufacturing company based in the Democratic Republic of Congo (DRC), specializing in the production of high quality fabrics. We offer a wide range of textiles, including neutral fashion fabrics for all styles, traditional African wax prints, and fully customized fabrics for fashion creators.</p>
     </section>
 
     
@@ -74,7 +74,7 @@
 
     <section>
       <h2>Our Vision</h2>
-      <p>To elevate African textiles on a global scale through innovation, authenticity, and excellence — while empowering creators across the continent.</p>
+      <p>To elevate African textiles on a global scale through innovation, authenticity, and excellence  while empowering creators across the continent.</p>
     </section>
   </main>
 
