--- a/products.html
+++ b/products.html
@@ -51,7 +51,7 @@
                 <p><i class="fas fa-tag"></i> $ 2.50 / meter</p>
             </div>
             <div class="product-card">
-                <img src="folder_img/linen.jpeg" alt="">
+                <img src="folder_img/linen.jpg" alt="">
                 <h3><i class="fas fa-shopping-cart"></i>Linen</h3>
                 <p><i class="fas fa-tag"></i> $ 3.79 / meter</p>
             </div>
